tests/dataset/tpc-ds/compiler/kotlin/q3.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:21:11Z
fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from q3.mochi

data class Date_dim(var d_date_sk: Int, var d_year: Int, var d_moy: Int)

data class Item(var i_item_sk: Int, var i_manufact_id: Int, var i_brand_id: Int, var i_brand: String)

data class Store_sale(var ss_sold_date_sk: Int, var ss_item_sk: Int, var ss_ext_sales_price: Double)

val date_dim = mutableListOf(Date_dim(d_date_sk = 1, d_year = 1998, d_moy = 12))

val store_sales = mutableListOf(Store_sale(ss_sold_date_sk = 1, ss_item_sk = 1, ss_ext_sales_price = 10.0), Store_sale(ss_sold_date_sk = 1, ss_item_sk = 2, ss_ext_sales_price = 20.0))

val item = mutableListOf(Item(i_item_sk = 1, i_manufact_id = 100, i_brand_id = 1, i_brand = "Brand1"), Item(i_item_sk = 2, i_manufact_id = 100, i_brand_id = 2, i_brand = "Brand2"))

val result = run {
    val __groups = mutableMapOf<MutableMap<String, Any?>, Group<MutableMap<String, Any?>, MutableMap<String, Any?>>>()
    val __order = mutableListOf<MutableMap<String, Any?>>()
    for (dt in date_dim) {
        for (ss in store_sales) {
            if (dt.d_date_sk == ss.ss_sold_date_sk) {
                for (i in item) {
                    if (ss.ss_item_sk == i.i_item_sk) {
                        if (i.i_manufact_id == 100 && dt.d_moy == 12) {
                            val __k = (mutableMapOf("d_year" to dt.d_year, "brand_id" to i.i_brand_id, "brand" to i.i_brand) as MutableMap<String, Any?>)
                            var __g = __groups[__k]
                            if (__g == null) {
                                __g = Group(__k, mutableListOf<MutableMap<String, Any?>>())
                                __groups[__k] = __g
                                __order.add(__k)
                            }
                            __g.add(mutableMapOf("dt" to dt, "ss" to ss, "i" to i) as MutableMap<String, Any?>)
                        }
                    }
                }
            }
        }
    }
    __order.sortBy { k ->
        val g = __groups[k]!!
        mutableListOf((g.key as MutableMap<String, Any?>)["d_year"], -sum(run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["ss_ext_sales_price"])
    }
    __res
}), (g.key as MutableMap<String, Any?>)["brand_id"]) as Comparable<Any>
    }
    val __res = mutableListOf<Any?>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add(mutableMapOf("d_year" to (g.key as MutableMap<String, Any?>)["d_year"], "brand_id" to (g.key as MutableMap<String, Any?>)["brand_id"], "brand" to (g.key as MutableMap<String, Any?>)["brand"], "sum_agg" to sum(run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["ss_ext_sales_price"])
    }
    __res
})))
    }
    __res
}

fun main() {
    json(result)
}
